13.03.2006
Changes by Nuno Ramiro
	- Stability.
	- Debug.

12.03.2006
Changes by Nuno Ramiro
	- More debug.
	- Small fixes / Memory leaks.

11.03.2006
Changes by Nuno Ramiro
	- Small debug changes.
	- Memory leaks (mainly CSL and GUI files).
	- Debug.

10.03.2006
Changes by Nuno Ramiro
	- Logger was not working 100% under linux (Fixed).

10.03.2006
Changes by Florian Fischer (SiENcE)
	- Small fix to SDLScreen.cpp to give GetDefaultHue a return 0;
	- Devcpp Project updated (btree.cpp removed)

9.03.2006
Changes by Nuno Ramiro
	- Linux compatibility.
	- Logger improvment.
	- Some cleanup.
	- Got rid of network.h, btree.h and btree.cpp they weren't beeing used.
	- Updated Linux Makefile and VS05 Solution.
	- Updated ReadMe.

8.03.2006
Changes by Nuno Ramiro
	- Stability improvements.
	- Memory leaks.
	- Macros class fix.
	- Write bug.
	- Small fixes.
	- XML problem fix.
	- Small Logger fix, added tests (assertions).
	- Added WriteDebug, should be used when testing output values.
	- Credits add/fix.

6.03.2006
Changes by Florian Fischer (SiENcE)
	- iris.csl - deinit and init removed from handler_deinit

1.03.2006
Changes by Florian Fischer (SiENcE)
	- Characters.cpp - Quick fix to get walking working again (m_moving = -1;) - must be recoded

1.03.2006
Changes by Nuno Ramiro
	- Speed improvements.
	- Small fixes.
	- Removed console under windows and when not debugging.

28.02.2006
Changes by Nuno Ramiro
	- Small fixes.
	- Debugs.
	- Memory leaks.
	- Some warnings.
	- Stability.
	- Mouse Move highlight bug fixed.
	- Fixed walking.
	- Linux compatibility.

27.02.2006
26.02.2006
25.02.2006
24.02.2006
Changes by Nuno Ramiro
	- Debugs.
	- Memory leaks.
	- Stability.

23.02.2006
Changes by Nuno Ramiro
	- Code simplification (Logger files).
	- Cleaned SDLScreen class and added some documentation.
	- Memory leak fixed under SpeechLoader.
	- Some more leaks fixed.

22.02.2006
Changes by Nuno Ramiro
	- Cleaned SDLEvent class a bit and documented it (doxygen).