@@ -1110,17 +1110,23 @@ void cClient::Act_Char (cPacket * packet)
       }
 }
 
-void cClient::Act_Speak (cPacket * packet)
+void cClient::Act_Speak( cPacket *packet )
 {
-  char name[30];
-  Uint16 len = (Uint16) packet->packet.Speak.m_len;
-  char *msg = new char[len - 44 + 1];
-  strncpy (name, packet->packet.Speak.name, 29);
-  strncpy (msg, &packet->packet.Speak.message, len - 44);
-  unsigned short color = packet->packet.Speak.m_color;
-  if (callback_OnSpeech)
-    callback_OnSpeech (msg, name, (Uint32) packet->packet.Speak.m_id, color);
-  delete msg;
+	char name[30];
+	Uint16 len = (Uint16)packet->packet.Speak.m_len;
+	char *msg = new char[len - 44 + 1];
+
+	strncpy( name, packet->packet.Speak.name, 29 );
+	strncpy( msg, &packet->packet.Speak.message, len - 44 );
+	
+	unsigned short color = packet->packet.Speak.m_color;
+	
+	if ( callback_OnSpeech )
+	{
+		callback_OnSpeech( msg, name, (Uint32)packet->packet.Speak.m_id, color );
+	}
+
+	// SAFE_DELETE( msg );
 }
 
 void cClient::Act_SpeakUnicode (cPacket * packet)
@@ -3022,84 +3028,84 @@ void cClient::Send_Speech (std::string text, Uint8 mode)
 
 void cClient::Send_Speech (std::string text, Uint8 mode)
 {
- 
-  std::vector<Uint16> keywords;
+	std::vector<Uint16> keywords;
+
+	Uint16 count = 0;
   
+	keywords = SpeechLoader::GetInstance()->GetIDs( text );
+	count = keywords.size();
+	// std::cout << "KeyWord Count: " << count << std::endl;
+	cPacket packet;
 
-  Uint16 count = 0;
+	if ( count > 0 )
+	{
+		int keyw_size = 2;
+		for ( int k = 0; k < count; k++ )
+		{
+			if ( (k & 1) == 0 )
+			{
+				keyw_size+=1;
+			}
+			else
+			{
+				keyw_size+=2;
+			}
+		}
   
-  keywords=pSpeechLoader.GetIDs(text);
-  count = keywords.size();
-  //std::cout << "KeyWord Count: " << count << std::endl;
-  cPacket packet;
-
-  if(count>0){
-              
-  int keyw_size=2;
-  for(int k=0;k<count;k++)
-  {
-   if((k&1)==0)
-    keyw_size+=1;
-   else                        
-    keyw_size+=2;
-  }
-  
-  packet.AddByte(0xAD);
-  packet.AddWord(12+ keyw_size + text.size() + 1);
-  packet.AddByte(count>0?0xC0:0);
-  packet.AddWord( Config::GetSpeechHue() );
-  packet.AddWord(0);
-  packet.AddDword(0x49544100);
-
-
-
- 
-  packet.AddWord((count << 4) | ((keywords.at(0) & 0xF000) >> 8));
-  for(int i = 0; i < count; i++)
-  {
- 
-
-   if((i & 1)==0){
-    Uint8 word =  (Uint8) keywords.at(i);    
-    packet.AddByte(word);
-   } 
-   else 
-   {
-    Uint16 nextword;    
+		packet.AddByte( 0xAD );
+		packet.AddWord( 12 + keyw_size + text.size() + 1 );
+		packet.AddByte( (count > 0) ? 0xC0 : 0 );
+		packet.AddWord( Config::GetSpeechHue() );
+		packet.AddWord( 0 );
+		packet.AddDword( 0x49544100 );
+		packet.AddWord( ( count << 4 ) | ( (keywords.at( 0 ) & 0xF000) >> 8 ) );
+		
+		for ( int i = 0; i < count; i++ )
+		{
+			if ( (i & 1) == 0 )
+			{
+				Uint8 word =  (Uint8)keywords.at( i );    
+				packet.AddByte( word );
+			}
+			else 
+			{
+				Uint16 nextword;    
     
-    if(i==count-1)
-     nextword=0;
-    else
-     nextword= keywords.at(i+1); 
+				if ( i == count - 1 )
+				{
+					nextword=0;
+				}
+				else
+				{
+					nextword = keywords.at( i + 1 ); 
+				}
      
-    Uint16 word = keywords.at(i);
-    word <<= 4;
-    word |= (nextword  & 0xF000);
-     packet.AddWord(word);
-   }
-   
-}
+				Uint16 word = keywords.at( i );
+				word <<= 4;
+				word |= (nextword  & 0xF000);
+				packet.AddWord( word );
+			}
+		}
+		
+		packet.AddData( (void*)text.c_str(), text.size() );
+		packet.AddByte( 0 );
 
-
-packet.AddData((void*) text.c_str(), text.size());
-packet.AddByte(0);
-
-Send(&packet);  
- }
- else{
-   
-  //cPacket packet;
-  packet.Clear ();
-  packet.FillPacket (PCK_Talk);
-  packet.SetLength (1);
-  packet.AddWord (text.size () + 9);
-  packet.AddByte (mode);
-  //packet.AddWord(100);
-  packet.AddWord ( Config::GetSpeechHue() );
-  packet.AddWord (3);
-  packet.AddData ((void *) text.c_str (), text.size ());
-  Send (&packet.packet, text.size () + 9);
- }
+		Send( &packet );
+	}
+	else
+	{   
+		//cPacket packet;
+		packet.Clear();
+		packet.FillPacket( PCK_Talk );
+		packet.SetLength( 1 );
+		packet.AddWord( text.size() + 9 );
+		packet.AddByte( mode );
+		//packet.AddWord( 100 );
+		packet.AddWord( Config::GetSpeechHue() );
+		packet.AddWord( 3 );
+		packet.AddData( (void *)text.c_str(), text.size() );
+		Send( &packet.packet, text.size() + 9 );
+	}
 }
 
 void cClient::Send_SpeechUNICODE(std::string text, Uint8 mode)
