@@ -2,6 +2,9 @@
 Changes by Nuno Ramiro
 	- Stability.
 	- Debug.
+	- Crash fixes.
+	- Chat / Talk bug fix.
+	- GUI/Menu click crash fix.
 
 12.03.2006
 Changes by Nuno Ramiro
